# rx_tech_demo

./: .clang-format  .clang-tidy  .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  README.md  findings.md  progress.md  task_plan.md  test_rx_config.conf
benchmarks/: CMakeLists.txt  benchmark_core.cpp
cmake/: dependencies.cmake  (+2 more)
fuzz/: CMakeLists.txt  fuzz_sample_packet_parser.cpp  fuzz_udp_payload_assembler.cpp
src/apps/: CMakeLists.txt  rxbench_dpdk_main.cpp  rxbench_socket_main.cpp
src/apps/common/: app_main_common.cpp  cli_args.cpp  cli_args.h
src/backends/af_xdp/: CMakeLists.txt
src/backends/af_xdp/bpf/: xdp_redirect_kern.bpf.c
src/backends/af_xdp/src/: xdp_backend.cpp
src/backends/dpdk/: CMakeLists.txt
src/backends/dpdk/src/: dpdk_backend.cpp
src/backends/socket/: CMakeLists.txt
src/backends/socket/src/: socket_backend.cpp
src/benchmark_core/: CMakeLists.txt
src/benchmark_core/include/rxtech/: bench_context.h  bench_runner.h  demo_protocol.h  metrics.h  mode_processor.h  packet_desc.h  parser.h  receive_runner.h  report_writer.h  rx_backend.h  rx_config.h  scenario.h
src/benchmark_core/src/: bench_context.cpp  bench_runner.cpp  metrics.cpp  parser.cpp  report_writer_csv.cpp  report_writer_json.cpp  rx_config.cpp  scenario.cpp
src/legacy/: CMakeLists.txt  af_xdp_main_legacy.cpp
src/legacy/af_xdp/: CMakeLists.txt
src/legacy/af_xdp/src/: xdp_backend.cpp
src/receiver/: CMakeLists.txt
src/receiver/admit/: cpi_admission.cpp
src/receiver/admit/rxtech/: admission_result.h  cpi_admission.h  recent_closed_ring.h
src/receiver/admit/src/: cpi_admission.cpp
src/receiver/app/: cli_args.cpp  cli_args.h  main_dpdk.cpp  main_socket.cpp  run_app.cpp  run_app.h
src/receiver/app/cli/: cli_args.cpp  cli_args.h
src/receiver/app/common/: app_main_common.cpp
src/receiver/core/: cpi_state_coordinator.cpp  owner_loop.cpp  owner_loop_summary.cpp  status_panel.cpp
src/receiver/core/internal/: cpi_state_coordinator.h  owner_loop_runtime_state.h  owner_loop_state.h  owner_loop_summary.h
src/receiver/core/rxtech/: owner_loop.h  owner_state.h
src/receiver/core/src/: owner_loop.cpp  owner_loop_summary.cpp  status_panel.cpp
src/receiver/finalize/: cpi_finalizer.cpp
src/receiver/finalize/rxtech/: cpi_finalizer.h
src/receiver/finalize/src/: cpi_finalizer.cpp
src/receiver/ingress/dpdk/: arp_responder.cpp  dpdk_backend.cpp
src/receiver/ingress/filereplay/: file_replay_backend.cpp
src/receiver/ingress/socket/: linux_socket_backend.cpp
src/receiver/output/: capture_sink.cpp  cpi_consumer.cpp  slow_consumer.cpp
src/receiver/output/internal/: capture_sink.h
src/receiver/output/rxtech/: output_pool.h
src/receiver/protocol/: data_order_tracker.cpp  data_order_tracker.h  packet_pipeline.cpp  packet_pipeline.h  protocol_pipeline_types.h  protocol_sequence_interpreter.cpp  sample_packet_parser.cpp  sample_packet_validator.cpp  udp_datagram_pipeline.cpp  udp_datagram_pipeline.h  udp_payload_assembler.cpp
src/receiver/protocol/rxtech/: packet_parser.h  packet_validator.h  parser.h  protocol_sequence_interpreter.h  protocol_spec.h  sample_packet_parser.h  sample_packet_validator.h  udp_payload_assembler.h
src/receiver/protocol/src/: packet_validator.cpp  parser.cpp  protocol_sequence_interpreter.cpp  sample_packet_parser.cpp  sample_packet_validator.cpp  udp_payload_assembler.cpp
src/receiver/runtime/: debug_capture_writer.cpp  raw_frame_recorder.cpp  receive_runner.cpp  rx_config.cpp
src/receiver/runtime/internal/: debug_capture_writer.h  path_utils.h
src/receiver/runtime/rxtech/: raw_frame_recorder.h  rx_backend.h  rx_config.h  spsc_ring.h
src/receiver/runtime/src/: receive_runner.cpp  rx_config.cpp
src/receiver/sidecar/: event_logger.cpp  metrics.cpp  metrics_exporter.cpp  run_context_snapshot.cpp  runtime_status_reporter.cpp  status_panel.cpp  structured_logger.cpp  summary_renderer.cpp  traffic_state_tracker.cpp
src/receiver/sidecar/internal/: event_logger.h  event_schema.h  metrics_exporter.h  rate_limiter.h  run_context_snapshot.h  runtime_status_reporter.h  status_panel.h  structured_logger.h  summary_renderer.h  traffic_state_tracker.h
src/receiver/sidecar/rxtech/: metrics.h
src/receiver/sidecar/src/: metrics.cpp
src/receiver/storage/: progress_tracker.cpp  slot_writer.cpp
src/receiver/storage/rxtech/: cpi_context.h  cpi_context_pool.h  progress_tracker.h  reassembly.h  slot_writer.h
src/receiver/storage/src/: progress_tracker.cpp  reassembly.cpp  slot_writer.cpp
src/receiver/verify/: cpi_verifier.cpp
src/replay_sender/: CMakeLists.txt  af_packet_sender.cpp  af_packet_sender.h  frame_builder.cpp  frame_builder.h  manifest_loader.cpp  manifest_loader.h  pps_controller.h  replay_config.cpp  replay_config.h  replay_main.cpp
src/sender/: CMakeLists.txt
tests/integration/: CMakeLists.txt  test_bench_fake.cpp  test_bench_smoke.cpp  test_file_replay_pipeline.cpp  test_receive_runner_fake.cpp  test_slow_consumer_pressure.cpp  test_socket_three_port.cpp
tests/unit/: CMakeLists.txt  test_arp_responder.cpp  test_cli_args.cpp  test_cpi_admission.cpp  test_cpi_output_pipeline.cpp  test_cpi_timeout.cpp  test_cpi_verifier.cpp  test_data_order_tracker.cpp  test_debug_capture_writer.cpp  test_dpdk_datagram_adapter.cpp  test_dpdk_eal_args.cpp  test_dynamic_prt.cpp  test_event_logger.cpp  test_linux_socket_backend.cpp  test_merge_config.cpp  test_metrics.cpp  test_metrics_exporter.cpp  test_owner_loop_bridge_safety.cpp  test_owner_loop_summary.cpp  test_packet_validator.cpp  test_parser.cpp  test_pool_exhaustion_degradation.cpp  test_protocol_sequence_interpreter.cpp  test_reassembly.cpp  test_replay_config.cpp  test_replay_manifest.cpp  test_replay_manifest_loader.cpp  test_replay_plan.cpp  test_replay_target.cpp  test_runtime_legacy_xdp_config.cpp  test_rx_config.cpp  test_sample_packet_parser.cpp  test_sample_packet_validator.cpp  test_scenario_loader.cpp  test_slot_writer.cpp  test_slow_consumer.cpp  test_spsc_ring.cpp  test_summary_renderer.cpp  test_traffic_state_tracker.cpp  test_udp_datagram_pipeline.cpp  (+1 more)
(+241 files in other folders)
