add_executable(test_parser test_parser.cpp)
target_link_libraries(test_parser PRIVATE rx_receiver_core)
add_test(NAME test_parser COMMAND test_parser)
set_tests_properties(test_parser PROPERTIES WORKING_DIRECTORY ${CMAKE_SOURCE_DIR})
rxtech_apply_warnings(test_parser)

add_executable(test_spsc_ring test_spsc_ring.cpp)
target_link_libraries(test_spsc_ring PRIVATE rx_receiver_core)
add_test(NAME test_spsc_ring COMMAND test_spsc_ring)
set_tests_properties(test_spsc_ring PROPERTIES WORKING_DIRECTORY ${CMAKE_SOURCE_DIR})
rxtech_apply_warnings(test_spsc_ring)

add_executable(test_metrics test_metrics.cpp)
target_link_libraries(test_metrics PRIVATE rx_receiver_core)
add_test(NAME test_metrics COMMAND test_metrics)
set_tests_properties(test_metrics PROPERTIES WORKING_DIRECTORY ${CMAKE_SOURCE_DIR})
rxtech_apply_warnings(test_metrics)

add_executable(test_rx_config test_rx_config.cpp)
target_link_libraries(test_rx_config PRIVATE rx_receiver_core)
add_test(NAME test_rx_config COMMAND test_rx_config)
set_tests_properties(test_rx_config PROPERTIES WORKING_DIRECTORY ${CMAKE_SOURCE_DIR})
rxtech_apply_warnings(test_rx_config)

add_executable(test_merge_config test_merge_config.cpp)
target_link_libraries(test_merge_config PRIVATE rx_receiver_core)
add_test(NAME test_merge_config COMMAND test_merge_config)
set_tests_properties(test_merge_config PROPERTIES WORKING_DIRECTORY ${CMAKE_SOURCE_DIR})
rxtech_apply_warnings(test_merge_config)

add_executable(test_reassembly test_reassembly.cpp)
target_link_libraries(test_reassembly PRIVATE rx_receiver_core)
add_test(NAME test_reassembly COMMAND test_reassembly)
set_tests_properties(test_reassembly PROPERTIES WORKING_DIRECTORY ${CMAKE_SOURCE_DIR})
rxtech_apply_warnings(test_reassembly)

add_executable(test_packet_validator test_packet_validator.cpp)
target_link_libraries(test_packet_validator PRIVATE rx_receiver_core)
add_test(NAME test_packet_validator COMMAND test_packet_validator)
set_tests_properties(test_packet_validator PROPERTIES WORKING_DIRECTORY ${CMAKE_SOURCE_DIR})
rxtech_apply_warnings(test_packet_validator)

add_executable(test_sample_packet_parser test_sample_packet_parser.cpp)
target_link_libraries(test_sample_packet_parser PRIVATE rx_receiver_core)
add_test(NAME test_sample_packet_parser COMMAND test_sample_packet_parser)
set_tests_properties(test_sample_packet_parser PROPERTIES WORKING_DIRECTORY ${CMAKE_SOURCE_DIR})
rxtech_apply_warnings(test_sample_packet_parser)

add_executable(test_arp_responder test_arp_responder.cpp)
target_link_libraries(test_arp_responder PRIVATE rx_receiver_core)
add_test(NAME test_arp_responder COMMAND test_arp_responder)
set_tests_properties(test_arp_responder PROPERTIES WORKING_DIRECTORY ${CMAKE_SOURCE_DIR})
rxtech_apply_warnings(test_arp_responder)

add_executable(test_replay_manifest test_replay_manifest.cpp)
target_link_libraries(test_replay_manifest PRIVATE rx_replay_sender_core)
add_test(NAME test_replay_manifest COMMAND test_replay_manifest)
set_tests_properties(test_replay_manifest PROPERTIES WORKING_DIRECTORY ${CMAKE_SOURCE_DIR})
rxtech_apply_warnings(test_replay_manifest)

add_executable(test_replay_plan test_replay_plan.cpp)
target_link_libraries(test_replay_plan PRIVATE rx_replay_sender_core)
add_test(NAME test_replay_plan COMMAND test_replay_plan)
set_tests_properties(test_replay_plan PROPERTIES WORKING_DIRECTORY ${CMAKE_SOURCE_DIR})
rxtech_apply_warnings(test_replay_plan)

add_executable(test_replay_target test_replay_target.cpp)
target_link_libraries(test_replay_target PRIVATE rx_replay_sender_core)
add_test(NAME test_replay_target COMMAND test_replay_target)
set_tests_properties(test_replay_target PROPERTIES WORKING_DIRECTORY ${CMAKE_SOURCE_DIR})
rxtech_apply_warnings(test_replay_target)
