add_executable(test_spsc_ring test_spsc_ring.cpp)
target_link_libraries(test_spsc_ring PRIVATE rx_receiver_core)
add_test(NAME test_spsc_ring COMMAND test_spsc_ring)
set_tests_properties(test_spsc_ring PROPERTIES WORKING_DIRECTORY ${CMAKE_SOURCE_DIR})
rxtech_apply_warnings(test_spsc_ring)

add_executable(test_metrics test_metrics.cpp)
target_link_libraries(test_metrics PRIVATE rx_receiver_core)
add_test(NAME test_metrics COMMAND test_metrics)
set_tests_properties(test_metrics PROPERTIES WORKING_DIRECTORY ${CMAKE_SOURCE_DIR})
rxtech_apply_warnings(test_metrics)

add_executable(test_rx_config test_rx_config.cpp)
target_link_libraries(test_rx_config PRIVATE rx_receiver_core)
add_test(NAME test_rx_config COMMAND test_rx_config)
set_tests_properties(test_rx_config PROPERTIES WORKING_DIRECTORY ${CMAKE_SOURCE_DIR})
rxtech_apply_warnings(test_rx_config)

add_executable(test_merge_config test_merge_config.cpp)
target_link_libraries(test_merge_config PRIVATE rx_receiver_core)
add_test(NAME test_merge_config COMMAND test_merge_config)
set_tests_properties(test_merge_config PROPERTIES WORKING_DIRECTORY ${CMAKE_SOURCE_DIR})
rxtech_apply_warnings(test_merge_config)

add_executable(test_sample_packet_parser test_sample_packet_parser.cpp)
target_link_libraries(test_sample_packet_parser PRIVATE rx_receiver_core)
add_test(NAME test_sample_packet_parser COMMAND test_sample_packet_parser)
set_tests_properties(test_sample_packet_parser PROPERTIES WORKING_DIRECTORY ${CMAKE_SOURCE_DIR})
rxtech_apply_warnings(test_sample_packet_parser)

add_executable(test_sample_packet_validator test_sample_packet_validator.cpp)
target_link_libraries(test_sample_packet_validator PRIVATE rx_receiver_core)
add_test(NAME test_sample_packet_validator COMMAND test_sample_packet_validator)
set_tests_properties(test_sample_packet_validator PROPERTIES WORKING_DIRECTORY ${CMAKE_SOURCE_DIR})
rxtech_apply_warnings(test_sample_packet_validator)

add_executable(test_protocol_sequence_interpreter test_protocol_sequence_interpreter.cpp)
target_link_libraries(test_protocol_sequence_interpreter PRIVATE rx_receiver_core)
add_test(NAME test_protocol_sequence_interpreter COMMAND test_protocol_sequence_interpreter)
set_tests_properties(test_protocol_sequence_interpreter PROPERTIES WORKING_DIRECTORY ${CMAKE_SOURCE_DIR})
rxtech_apply_warnings(test_protocol_sequence_interpreter)

add_executable(test_slot_writer test_slot_writer.cpp)
target_link_libraries(test_slot_writer PRIVATE rx_receiver_core)
add_test(NAME test_slot_writer COMMAND test_slot_writer)
set_tests_properties(test_slot_writer PROPERTIES WORKING_DIRECTORY ${CMAKE_SOURCE_DIR})
rxtech_apply_warnings(test_slot_writer)

add_executable(test_cpi_admission test_cpi_admission.cpp)
target_link_libraries(test_cpi_admission PRIVATE rx_receiver_core)
add_test(NAME test_cpi_admission COMMAND test_cpi_admission)
set_tests_properties(test_cpi_admission PROPERTIES WORKING_DIRECTORY ${CMAKE_SOURCE_DIR})
rxtech_apply_warnings(test_cpi_admission)

add_executable(test_udp_payload_assembler test_udp_payload_assembler.cpp)
target_link_libraries(test_udp_payload_assembler PRIVATE rx_receiver_core)
add_test(NAME test_udp_payload_assembler COMMAND test_udp_payload_assembler)
set_tests_properties(test_udp_payload_assembler PROPERTIES WORKING_DIRECTORY ${CMAKE_SOURCE_DIR})
rxtech_apply_warnings(test_udp_payload_assembler)

add_executable(test_owner_loop_summary test_owner_loop_summary.cpp)
target_link_libraries(test_owner_loop_summary PRIVATE rx_receiver_core)
target_include_directories(test_owner_loop_summary PRIVATE ${CMAKE_SOURCE_DIR}/src/receiver/core/internal)
add_test(NAME test_owner_loop_summary COMMAND test_owner_loop_summary)
set_tests_properties(test_owner_loop_summary PROPERTIES WORKING_DIRECTORY ${CMAKE_SOURCE_DIR})
rxtech_apply_warnings(test_owner_loop_summary)

add_executable(test_arp_responder test_arp_responder.cpp)
target_link_libraries(test_arp_responder PRIVATE rx_receiver_dpdk_ingress)
target_include_directories(test_arp_responder PRIVATE ${CMAKE_SOURCE_DIR}/src/receiver/ingress/dpdk/internal)
add_test(NAME test_arp_responder COMMAND test_arp_responder)
set_tests_properties(test_arp_responder PROPERTIES WORKING_DIRECTORY ${CMAKE_SOURCE_DIR})
rxtech_apply_warnings(test_arp_responder)
