add_executable(test_spsc_ring test_spsc_ring.cpp)
target_link_libraries(test_spsc_ring PRIVATE rx_receiver_core)
add_test(NAME test_spsc_ring COMMAND test_spsc_ring)
set_tests_properties(test_spsc_ring PROPERTIES WORKING_DIRECTORY ${CMAKE_SOURCE_DIR})
rxtech_apply_warnings(test_spsc_ring)

add_executable(test_metrics test_metrics.cpp)
target_link_libraries(test_metrics PRIVATE rx_receiver_core)
add_test(NAME test_metrics COMMAND test_metrics)
set_tests_properties(test_metrics PROPERTIES WORKING_DIRECTORY ${CMAKE_SOURCE_DIR})
rxtech_apply_warnings(test_metrics)

add_executable(test_cli_args test_cli_args.cpp)
target_link_libraries(test_cli_args PRIVATE rx_receiver_app)
target_include_directories(test_cli_args PRIVATE ${CMAKE_SOURCE_DIR}/src/receiver/app)
add_test(NAME test_cli_args COMMAND test_cli_args)
set_tests_properties(test_cli_args PROPERTIES WORKING_DIRECTORY ${CMAKE_SOURCE_DIR})
rxtech_apply_warnings(test_cli_args)

add_executable(test_rx_config test_rx_config.cpp)
target_link_libraries(test_rx_config PRIVATE rx_receiver_core)
add_test(NAME test_rx_config COMMAND test_rx_config)
set_tests_properties(test_rx_config PROPERTIES WORKING_DIRECTORY ${CMAKE_SOURCE_DIR})
rxtech_apply_warnings(test_rx_config)

add_executable(test_runtime_legacy_xdp_config test_runtime_legacy_xdp_config.cpp)
target_link_libraries(test_runtime_legacy_xdp_config PRIVATE rx_receiver_core)
add_test(NAME test_runtime_legacy_xdp_config COMMAND test_runtime_legacy_xdp_config)
set_tests_properties(test_runtime_legacy_xdp_config PROPERTIES WORKING_DIRECTORY ${CMAKE_SOURCE_DIR})
rxtech_apply_warnings(test_runtime_legacy_xdp_config)

add_executable(test_merge_config test_merge_config.cpp)
target_link_libraries(test_merge_config PRIVATE rx_receiver_core)
add_test(NAME test_merge_config COMMAND test_merge_config)
set_tests_properties(test_merge_config PROPERTIES WORKING_DIRECTORY ${CMAKE_SOURCE_DIR})
rxtech_apply_warnings(test_merge_config)

add_executable(test_sample_packet_parser test_sample_packet_parser.cpp)
target_link_libraries(test_sample_packet_parser PRIVATE rx_receiver_core)
add_test(NAME test_sample_packet_parser COMMAND test_sample_packet_parser)
set_tests_properties(test_sample_packet_parser PROPERTIES WORKING_DIRECTORY ${CMAKE_SOURCE_DIR})
rxtech_apply_warnings(test_sample_packet_parser)

add_executable(test_sample_packet_validator test_sample_packet_validator.cpp)
target_link_libraries(test_sample_packet_validator PRIVATE rx_receiver_core)
add_test(NAME test_sample_packet_validator COMMAND test_sample_packet_validator)
set_tests_properties(test_sample_packet_validator PROPERTIES WORKING_DIRECTORY ${CMAKE_SOURCE_DIR})
rxtech_apply_warnings(test_sample_packet_validator)

add_executable(test_protocol_sequence_interpreter test_protocol_sequence_interpreter.cpp)
target_link_libraries(test_protocol_sequence_interpreter PRIVATE rx_receiver_core)
add_test(NAME test_protocol_sequence_interpreter COMMAND test_protocol_sequence_interpreter)
set_tests_properties(test_protocol_sequence_interpreter PROPERTIES WORKING_DIRECTORY ${CMAKE_SOURCE_DIR})
rxtech_apply_warnings(test_protocol_sequence_interpreter)

add_executable(test_slot_writer test_slot_writer.cpp)
target_link_libraries(test_slot_writer PRIVATE rx_receiver_core)
add_test(NAME test_slot_writer COMMAND test_slot_writer)
set_tests_properties(test_slot_writer PROPERTIES WORKING_DIRECTORY ${CMAKE_SOURCE_DIR})
rxtech_apply_warnings(test_slot_writer)

add_executable(test_cpi_admission test_cpi_admission.cpp)
target_link_libraries(test_cpi_admission PRIVATE rx_receiver_core)
add_test(NAME test_cpi_admission COMMAND test_cpi_admission)
set_tests_properties(test_cpi_admission PROPERTIES WORKING_DIRECTORY ${CMAKE_SOURCE_DIR})
rxtech_apply_warnings(test_cpi_admission)

add_executable(test_udp_payload_assembler test_udp_payload_assembler.cpp)
target_link_libraries(test_udp_payload_assembler PRIVATE rx_receiver_core)
add_test(NAME test_udp_payload_assembler COMMAND test_udp_payload_assembler)
set_tests_properties(test_udp_payload_assembler PROPERTIES WORKING_DIRECTORY ${CMAKE_SOURCE_DIR})
rxtech_apply_warnings(test_udp_payload_assembler)

add_executable(test_udp_datagram_pipeline test_udp_datagram_pipeline.cpp)
target_link_libraries(test_udp_datagram_pipeline PRIVATE rx_receiver_core)
add_test(NAME test_udp_datagram_pipeline COMMAND test_udp_datagram_pipeline)
set_tests_properties(test_udp_datagram_pipeline PROPERTIES WORKING_DIRECTORY ${CMAKE_SOURCE_DIR})
rxtech_apply_warnings(test_udp_datagram_pipeline)

add_executable(test_owner_loop_bridge_safety test_owner_loop_bridge_safety.cpp)
target_link_libraries(test_owner_loop_bridge_safety PRIVATE rx_receiver_core)
add_test(NAME test_owner_loop_bridge_safety COMMAND test_owner_loop_bridge_safety)
set_tests_properties(test_owner_loop_bridge_safety PROPERTIES WORKING_DIRECTORY ${CMAKE_SOURCE_DIR})
rxtech_apply_warnings(test_owner_loop_bridge_safety)

if(UNIX AND NOT APPLE)
    add_executable(test_linux_socket_backend test_linux_socket_backend.cpp)
    target_link_libraries(test_linux_socket_backend PRIVATE rx_receiver_core rx_receiver_socket_ingress)
    target_include_directories(test_linux_socket_backend PRIVATE
        ${CMAKE_SOURCE_DIR}/src/receiver/ingress/socket/internal
        ${CMAKE_SOURCE_DIR}/src/receiver/protocol
    )
    add_test(NAME test_linux_socket_backend COMMAND test_linux_socket_backend)
    set_tests_properties(test_linux_socket_backend PROPERTIES WORKING_DIRECTORY ${CMAKE_SOURCE_DIR})
    rxtech_apply_warnings(test_linux_socket_backend)
endif()

add_executable(test_owner_loop_summary test_owner_loop_summary.cpp)
target_link_libraries(test_owner_loop_summary PRIVATE rx_receiver_core)
target_include_directories(test_owner_loop_summary PRIVATE
    ${CMAKE_SOURCE_DIR}/src/receiver/core/internal
    ${CMAKE_SOURCE_DIR}/src/receiver/sidecar/internal
)
add_test(NAME test_owner_loop_summary COMMAND test_owner_loop_summary)
set_tests_properties(test_owner_loop_summary PROPERTIES WORKING_DIRECTORY ${CMAKE_SOURCE_DIR})
rxtech_apply_warnings(test_owner_loop_summary)

add_executable(test_arp_responder test_arp_responder.cpp)
target_link_libraries(test_arp_responder PRIVATE rx_receiver_dpdk_ingress)
target_include_directories(test_arp_responder PRIVATE ${CMAKE_SOURCE_DIR}/src/receiver/ingress/dpdk/internal)
add_test(NAME test_arp_responder COMMAND test_arp_responder)
set_tests_properties(test_arp_responder PROPERTIES WORKING_DIRECTORY ${CMAKE_SOURCE_DIR})
rxtech_apply_warnings(test_arp_responder)

add_executable(test_dpdk_eal_args test_dpdk_eal_args.cpp)
target_link_libraries(test_dpdk_eal_args PRIVATE rx_receiver_dpdk_ingress)
target_include_directories(test_dpdk_eal_args PRIVATE ${CMAKE_SOURCE_DIR}/src/receiver/ingress/dpdk/internal)
add_test(NAME test_dpdk_eal_args COMMAND test_dpdk_eal_args)
set_tests_properties(test_dpdk_eal_args PROPERTIES WORKING_DIRECTORY ${CMAKE_SOURCE_DIR})
rxtech_apply_warnings(test_dpdk_eal_args)

add_executable(test_dpdk_datagram_adapter test_dpdk_datagram_adapter.cpp)
target_link_libraries(test_dpdk_datagram_adapter PRIVATE rx_receiver_dpdk_ingress)
target_include_directories(test_dpdk_datagram_adapter PRIVATE ${CMAKE_SOURCE_DIR}/src/receiver/ingress/dpdk/internal)
add_test(NAME test_dpdk_datagram_adapter COMMAND test_dpdk_datagram_adapter)
set_tests_properties(test_dpdk_datagram_adapter PROPERTIES WORKING_DIRECTORY ${CMAKE_SOURCE_DIR})
rxtech_apply_warnings(test_dpdk_datagram_adapter)

add_executable(test_cpi_output_pipeline test_cpi_output_pipeline.cpp)
target_link_libraries(test_cpi_output_pipeline PRIVATE rx_receiver_core)
add_test(NAME test_cpi_output_pipeline COMMAND test_cpi_output_pipeline)
set_tests_properties(test_cpi_output_pipeline PROPERTIES WORKING_DIRECTORY ${CMAKE_SOURCE_DIR})
rxtech_apply_warnings(test_cpi_output_pipeline)

add_executable(test_dynamic_prt test_dynamic_prt.cpp)
target_link_libraries(test_dynamic_prt PRIVATE rx_receiver_core)
target_include_directories(test_dynamic_prt PRIVATE ${CMAKE_SOURCE_DIR}/src/receiver/core/internal)
add_test(NAME test_dynamic_prt COMMAND test_dynamic_prt)
set_tests_properties(test_dynamic_prt PROPERTIES WORKING_DIRECTORY ${CMAKE_SOURCE_DIR})
rxtech_apply_warnings(test_dynamic_prt)

add_executable(test_cpi_verifier test_cpi_verifier.cpp)
target_link_libraries(test_cpi_verifier PRIVATE rx_receiver_core)
add_test(NAME test_cpi_verifier COMMAND test_cpi_verifier)
set_tests_properties(test_cpi_verifier PROPERTIES WORKING_DIRECTORY ${CMAKE_SOURCE_DIR})
rxtech_apply_warnings(test_cpi_verifier)

add_executable(test_slow_consumer test_slow_consumer.cpp)
target_link_libraries(test_slow_consumer PRIVATE rx_slow_consumer_harness)
add_test(NAME test_slow_consumer COMMAND test_slow_consumer)
set_tests_properties(test_slow_consumer PROPERTIES WORKING_DIRECTORY ${CMAKE_SOURCE_DIR})
rxtech_apply_warnings(test_slow_consumer)

if(BUILD_REPLAY AND UNIX AND NOT CMAKE_CROSSCOMPILING)
    add_executable(test_replay_manifest_loader test_replay_manifest_loader.cpp)
    target_link_libraries(test_replay_manifest_loader PRIVATE replay_sender_lib)
    target_include_directories(test_replay_manifest_loader PRIVATE ${CMAKE_SOURCE_DIR}/src/replay_sender)
    add_test(NAME test_replay_manifest_loader COMMAND test_replay_manifest_loader)
    set_tests_properties(test_replay_manifest_loader PROPERTIES WORKING_DIRECTORY ${CMAKE_SOURCE_DIR})
    rxtech_apply_warnings(test_replay_manifest_loader)

    add_executable(test_replay_config test_replay_config.cpp)
    target_link_libraries(test_replay_config PRIVATE replay_sender_lib)
    target_include_directories(test_replay_config PRIVATE ${CMAKE_SOURCE_DIR}/src/replay_sender)
    add_test(NAME test_replay_config COMMAND test_replay_config)
    set_tests_properties(test_replay_config PROPERTIES WORKING_DIRECTORY ${CMAKE_SOURCE_DIR})
    rxtech_apply_warnings(test_replay_config)
endif()
